--- a/Foodie/Info.plist
+++ b/Foodie/Info.plist
@@ -8,8 +8,8 @@
 		<string>ChakraPetch-Bold.ttf</string>
 	</array>
 	<key>YELP_API_KEY</key>
-	<string>utoCP1DJiF01wkUuj62tHM-V0naFIxhjrU8kF1qqdXfOGEH8E7aVY4X_nnrlyD0Qsltvs0OrB6FEsREKwEUS9z5VHJIe98kDb8WmpZ2e7Gno6OOg4RVDY3Cm2qxAZ3Yx</string>
+	<string>XXXXXXXXXXXXXXXXXX</string>
 	<key>YELP_CLIENT_ID</key>
-	<string>IYZnZpswIEdAnrBMwtZU_A</string>
+	<string>XXXXXXXXXXXXXXXXXX</string>
 </dict>
 </plist>
